--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Studio</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">Web Studio</a>
-        <a href="./index.html">Studio</a>
-        <a href="./index.html">Portfolio</a>
-        <a href="./index.html">Contacts</a>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
       </nav>
       <address>
         <ul>
@@ -32,7 +34,7 @@
     </main>
     <!-- #region Advantages -->
     <section>
-      <h2 hidden>Advantages</h2>
+      <h2>Advantages</h2>
       <ul>
         <li>
           <h3>Strategy</h3>
